..F....... [ZBX-23290] fixed gap in the filter by tags on Monitoring > Latest data page
* commit '857d4b5612b2a570b722c6d9626e55d0f6b83ac0':
  ..F....... [ZBX-23290] fixed cell padding if filter tag value is hidden
  .D........ [ZBX-23290] added changelog file
  ..F....... [ZBX-23290] fixed gap in the filter by tags on Monitoring > Latest data page

(cherry picked from commit 95992e4068fb9112140a3af437c93d79e2f18fa2)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1250,6 +1250,10 @@ form {
 		button {
 			margin: 0;
 		}
+
+		table {
+			width: auto;
+		}
 	}
 
 	button {
